--- a/index.html
+++ b/index.html
@@ -19,6 +19,68 @@
     </div>
 </header>
 
+<section>
+    <div class="aside">
+        <ul>
+            <li>
+                <a href="#">
+                    <span><img src="icons/weight.png" alt="weight"></span>
+                    ALL
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span><img src="icons/abs.png" alt="abs"></span>
+                    ABS AND CORE
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span><img src="icons/arm.png" alt="arm"></span>
+                    ARM EXERCISES
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span><img src="icons/back.png" alt="back"></span>
+                    BACK EXERCISES
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span><img src="icons/chest.png" alt="chest"></span>
+                    CHEST EXERCISES
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span><img src="icons/leg.png" alt="leg"></span>
+                    LEG EXERCISES
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span><img src="icons/shoulder.png" alt="shoulder"></span>
+                    SHOULDER EXERCISES
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span><img src="icons/exercise.png" alt="exercise"></span>
+                    EXERCISES VIDEOS
+                </a>
+            </li>
+        </ul>
+
+        <form action="" method="post">
+            <button type="submit">
+                <img src="icons/search.png" alt="search">
+            </button>
+            <input type="search" placeholder="SEARCH">
+        </form>
+    </div>
+    <div class="workouts"></div>
+</section>
 
 </body>
 </html>
