--- a/index.html
+++ b/index.html
@@ -20,66 +20,105 @@
 </header>
 
 <section>
-    <div class="aside">
-        <ul>
-            <li>
-                <a href="#">
-                    <span><img src="icons/weight.png" alt="weight"></span>
-                    ALL
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span><img src="icons/abs.png" alt="abs"></span>
-                    ABS AND CORE
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span><img src="icons/arm.png" alt="arm"></span>
-                    ARM EXERCISES
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span><img src="icons/back.png" alt="back"></span>
-                    BACK EXERCISES
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span><img src="icons/chest.png" alt="chest"></span>
-                    CHEST EXERCISES
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span><img src="icons/leg.png" alt="leg"></span>
-                    LEG EXERCISES
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span><img src="icons/shoulder.png" alt="shoulder"></span>
-                    SHOULDER EXERCISES
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span><img src="icons/exercise.png" alt="exercise"></span>
-                    EXERCISES VIDEOS
-                </a>
-            </li>
-        </ul>
+    <div class="container">
+        <div class="aside">
+            <ul>
+                <li>
+                    <a href="#">
+                        <span><img src="icons/weight.png" alt="weight"></span>
+                        ALL
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span><img src="icons/abs.png" alt="abs"></span>
+                        ABS AND CORE
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span><img src="icons/arm.png" alt="arm"></span>
+                        ARM EXERCISES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span><img src="icons/back.png" alt="back"></span>
+                        BACK EXERCISES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span><img src="icons/chest.png" alt="chest"></span>
+                        CHEST EXERCISES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span><img src="icons/leg.png" alt="leg"></span>
+                        LEG EXERCISES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span><img src="icons/shoulder.png" alt="shoulder"></span>
+                        SHOULDER EXERCISES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span><img src="icons/exercise.png" alt="exercise"></span>
+                        EXERCISES VIDEOS
+                    </a>
+                </li>
+            </ul>
 
-        <form action="" method="post">
-            <button type="submit">
-                <img src="icons/search.png" alt="search">
-            </button>
-            <input type="search" placeholder="SEARCH">
-        </form>
+            <form action="" method="post">
+                <button type="submit">
+                    <img src="icons/search.png" alt="search">
+                </button>
+                <input type="search" placeholder="SEARCH">
+            </form>
+        </div>
+        <!--        -->
+        <div class="workouts">
+            <div class="all_workouts">
+                <span><img src="icons/weight_workout.png" alt="weight"></span>
+                <h2>ALL WORKOUTS</h2>
+                <div class="select">
+                    <select name="skill" >
+                        <option selected disabled hidden>SKILL LEVEL</option>
+                        <option value="beginner">BEGINNER</option>
+                        <option value="intermediate">INTERMEDIATE</option>
+                        <option value="professional">PROFESSIONAL</option>
+                        <option value="super-man">SUPER MAN</option>
+                    </select>
+                    <select name="exercise">
+                        <option selected disabled hidden>EXERCISE TYPE</option>
+                        <option value="endurance">ENDURANCE</option>
+                        <option value="strength">STRENGTH</option>
+                        <option value="balance">BALANCE</option>
+                        <option value="flexibility">FLEXIBILITY</option>
+                    </select>
+                    <select name="equipment">
+                        <option selected disabled hidden>EQUIPMENT</option>
+                        <option value="dumbbells">DUMBBELLS</option>
+                        <option value="barbell">BARBELL</option>
+                        <option value="horizontal-bar">HORIZONTAL BAR</option>
+                        <option value="machine">ROWING MACHINE</option>
+                        <option value="bench">BENCH</option>
+                    </select>
+                </div>
+            </div>
+
+            <!--        -->
+            <div class="videos">
+                <a href="#">
+                    <img src="img/main_video.jpg" alt="video">
+                </a>
+            </div>
+        </div>
     </div>
-    <div class="workouts"></div>
 </section>
 
 </body>
