some tweaks in section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
 
 <section>
-    <div class="container">
+    <div class="container d-flex">
         <div class="aside">
             <ul>
                 <li>
