some tweaks in "videos"

--- a/index.html
+++ b/index.html
@@ -14,10 +14,79 @@
 <body>
 
 <header>
-    <div class="container">
+    <div class="container d-flex border">
+        <a href="#" class="logo"><img src="icons/logo.png" alt="logo"></a>
+        <form class="search" action="" method="post">
+            <input class="search_input" type="search" name="search" placeholder="SEARCH" autocomplete="off">
+            <button class="search-btn" type="submit">
+                <img src="icons/search_icon.png" alt="search">
+            </button>
+        </form>
+        <a href="#" class="btn">
+            <span class="btn-icon"><img src="icons/shop_icon.png" alt="shop"></span>
+            ONLINE STORE
+        </a>
+        <a href="#" class="btn grey">
+            <span class="btn-icon"><img src="icons/login_icon.png" alt="login"></span>
+            LOG IN
+        </a>
+        <a href="#" class="btn red">
+            <span class="btn-icon"><img src="icons/signup_icon.png" alt="sign-up"></span>
+            SIGN UP NOW
+        </a>
+    </div>
+
+    <nav>
+        <div class="container d-flex baseline">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a class="menu-link" href="#">WORKOUTS</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="#">NUTRITION</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="#">OUR TRAINERS</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="#">COMPETITION PREP</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="#">TRAINING PROGRAMS</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="#">SUCCESS STORIES</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="#">E-BOOKS</a>
+                </li>
+            </ul>
+
+            <div class="socials">
+                <a class="social-link facebook" href="#" target="_blank">
+                    <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                </a>
+                <a class="social-link instagram" href="#" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a class="social-link twitter" href="#" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a class="social-link youtube" href="#" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </div>
+        </div>
+    </nav>
+</header>
+
+
+<section class="trainers">
+    <img src="img/bg.jpg" alt="bg">
+    <div class="container border absolute">
         <h1>WORKOUTS</h1>
     </div>
-</header>
+</section>
 
 <section>
     <div class="container d-flex">
@@ -113,13 +182,43 @@
 
             <!--        -->
             <div class="videos">
-                <a href="#">
-                    <img src="img/main_video.jpg" alt="video">
-                </a>
+                <video class="main_video" src="#" poster="img/main_video.jpg"></video>
+                <div class="video_item">
+                    <a href="#"><img src="img/video_2.jpg" alt="poster"></a>
+                    <div class="video_controls">
+                            <button class="far fa-star"></button>
+                            <span>WORKOUT NAME</span>
+
+                            <span>COMPLETE NOW</span>
+                            <div class="toggle-btn">
+                                <input type="checkbox" name="toggle">
+                                <span></span>
+                            </div>
+                    </div>
+                </div>
+                <div class="video_item">
+                    <a href="#"><img src="img/video_2.jpg" alt="poster"></a>
+                    <div class="video_controls">
+                        <div>
+                            <button class="fas fa-star active"></button>
+                            <span>WORKOUT NAME</span>
+                        </div>
+                        <div class="toggle">
+                            <div class="toggle-btn">
+                                <input type="checkbox">
+                                <span></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 </section>
+
+
+<script src="https://kit.fontawesome.com/daab012097.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
