--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
                     <div class="video_controls">
                             <button class="far fa-star"></button>
                             <span>WORKOUT NAME</span>
-
                             <span>COMPLETE NOW</span>
                             <div class="toggle-btn">
                                 <input type="checkbox" name="toggle">
@@ -196,24 +195,83 @@
                             </div>
                     </div>
                 </div>
+
                 <div class="video_item">
-                    <a href="#"><img src="img/video_2.jpg" alt="poster"></a>
+                    <a href="#"><img src="img/video_3.jpg" alt="poster"></a>
                     <div class="video_controls">
-                        <div>
-                            <button class="fas fa-star active"></button>
-                            <span>WORKOUT NAME</span>
-                        </div>
-                        <div class="toggle">
-                            <div class="toggle-btn">
-                                <input type="checkbox">
-                                <span></span>
-                            </div>
+                        <button class="far fa-star"></button>
+                        <span>WORKOUT NAME</span>
+                        <span>COMPLETE NOW</span>
+                        <div class="toggle-btn">
+                            <input type="checkbox" name="toggle">
+                            <span></span>
                         </div>
                     </div>
                 </div>
 
+                <div class="video_item">
+                    <a href="#"><img src="img/video_6.jpg" alt="poster"></a>
+                    <div class="video_controls">
+                        <button class="far fa-star"></button>
+                        <span>WORKOUT NAME</span>
+                        <span>COMPLETE NOW</span>
+                        <div class="toggle-btn">
+                            <input type="checkbox" name="toggle">
+                            <span></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="video_item">
+                    <a href="#"><img src="img/video_2.jpg" alt="poster"></a>
+                    <div class="video_controls">
+                        <button class="far fa-star"></button>
+                        <span>WORKOUT NAME</span>
+                        <span>COMPLETE NOW</span>
+                        <div class="toggle-btn">
+                            <input type="checkbox" name="toggle">
+                            <span></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video_item">
+                    <a href="#"><img src="img/video_3.jpg" alt="poster"></a>
+                    <div class="video_controls">
+                        <button class="far fa-star"></button>
+                        <span>WORKOUT NAME</span>
+                        <span>COMPLETE NOW</span>
+                        <div class="toggle-btn">
+                            <input type="checkbox" name="toggle">
+                            <span></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="video_item">
+                    <a href="#"><img src="img/video_6.jpg" alt="poster"></a>
+                    <div class="video_controls">
+                        <button class="far fa-star"></button>
+                        <span>WORKOUT NAME</span>
+                        <span>COMPLETE NOW</span>
+                        <div class="toggle-btn">
+                            <input type="checkbox" name="toggle">
+                            <span></span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="list-pages">
+                <a href="#" class=""><i class="fas fa-chevron-left"></i></a>
+                <a href="#" class="selected">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#" class=""><i class="fas fa-chevron-right"></i></a>
             </div>
         </div>
+
     </div>
 </section>
 
