--- a/index.html
+++ b/index.html
@@ -275,6 +275,104 @@
     </div>
 </section>
 
+<section class="subscribe">
+    <div class="container">
+        <p class="subscribe-text">
+            Get the latest promos, tips, and news direct from Stan McQuay & Team Physique Inc.
+            by subscribing to our weekly newsletter.
+        </p>
+        <form action="" method="post" class="subscribe-form">
+            <input type="email" name="email" class="subscribe-input" placeholder="ENTER EMAIL ADDRESS">
+            <button class="subscribe-btn" type="submit">SUBSCRIBE NOW
+            </button>
+        </form>
+    </div>
+</section>
+
+<footer>
+    <div class="container d-flex end">
+        <div class="footer-socials">
+            <a href="#" class="logo footer">
+                <img src="icons/logo.png" alt="logo">
+            </a>
+            <div class="socials">
+                <a class="social-link facebook footer" href="#" target="_blank">
+                    <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                </a>
+                <a class="social-link instagram footer" href="#" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a class="social-link twitter footer" href="#" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a class="social-link youtube footer" href="#" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="footer-menu">
+            <ul>
+                <li>
+                    <a href="#">VIP MEMBERSHIP</a>
+                </li>
+                <li>
+                    <a href="#">WHO WE ARE</a>
+                </li>
+                <li>
+                    <a href="#">WORKOUTS</a>
+                </li>
+                <li>
+                    <a href="#">NUTRITION</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">OUR TRAINERS</a>
+                </li>
+                <li>
+                    <a href="#">COMPETITION PREP</a>
+                </li>
+                <li>
+                    <a href="#">TRAINING PROGRAMS</a>
+                </li>
+                <li>
+                    <a href="#">SUCCES STORIES</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">TRANSFORMATIONS</a>
+                </li>
+                <li>
+                    <a href="#">ONLINE STORE</a>
+                </li>
+                <li>
+                    <a href="#">EBOOKS</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">TERMS & CONDITIONS</a>
+                </li>
+                <li>
+                    <a href="#">PRIVACY POLICY</a>
+                </li>
+                <li>
+                    <a href="#">SHIPPING POLICY</a>
+                </li>
+                <li>
+                    <a href="#">RETURNS POLICY</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="footer-divider"></div>
+</footer>
 
 <script src="https://kit.fontawesome.com/daab012097.js" crossorigin="anonymous"></script>
 
