--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
     <div class="container d-flex border">
         <a href="#" class="logo"><img src="icons/logo.png" alt="logo"></a>
-        <form class="search" action="" method="post">
+        <form class="search" action="" method="post" tabindex="0">
             <input class="search_input" type="search" name="search" placeholder="SEARCH" autocomplete="off">
             <button class="search-btn" type="submit">
                 <img src="icons/search_icon.png" alt="search">
@@ -155,7 +155,7 @@
                 <span><img src="icons/weight_workout.png" alt="weight"></span>
                 <h2>ALL WORKOUTS</h2>
                 <div class="select">
-                    <select name="skill" >
+                    <select name="skill">
                         <option selected disabled hidden>SKILL LEVEL</option>
                         <option value="beginner">BEGINNER</option>
                         <option value="intermediate">INTERMEDIATE</option>
